--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="robots" content="index, follow"/>
+  <meta name="google-site-verification" content="ZcFk3fkJUvXp_1S_4SS9R_cDZLvcRKw1LcR2juFo7uY" />
   <meta name="description" content="Tola Lemma Portfolio Web site, Tola L. , Tola Lemma, React Dev, Full stack Dev, MERN stack Dev, PERN stack Dev,tolalemma, www.tolalemma.com" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
